<resources>
    <string name="app_name">Altran</string>

    <string name="label_age">Age:\u0020</string>
    <string name="label_height">Height:\u0020</string>
    <string name="label_weight">Weight:\u0020</string>
    <string name="label_hair_color">Hair color:\u0020</string>
    <string name="label_professions">Professions:\u0020</string>
    <string name="label_friends">Friends:\u0020</string>
    <string name="search_hint">Incr. Search</string>
    <string name="spinner_label">Hair Filter</string>

    <string name="label_All">All</string>
    <string name="color_red">Red</string>
    <string name="color_pink">Pink</string>
    <string name="color_gray">Gray</string>
    <string name="color_green">Green</string>
    <string name="color_black">Black</string>
    <string-array name="hair_color_array">
        <item>@string/label_All</item>
        <item>@string/color_pink</item>
        <item>@string/color_red</item>
        <item>@string/color_gray</item>
        <item>@string/color_black</item>
        <item>@string/color_green</item>
    </string-array>
</resources>

