<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="3"
            android:weightSum="2">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblHeight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_height"
                    android:fontFamily="sans-serif-light"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/tvHeight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblWeight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_weight"
                    android:fontFamily="sans-serif-light"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/tvWeight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:textSize="15dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblHairColor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_hair_color"
                    android:fontFamily="sans-serif-light"
                    android:textSize="15dp"/>

                <TextView
                    android:id="@+id/tvHairColor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:textSize="15dp"/>

            </LinearLayout>

                <TextView
                    android:id="@+id/lblProfessions"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/label_professions"/>

                <TextView
                    android:id="@+id/tvProfessions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13dip"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:fontFamily="sans-serif"
                    />

            <TextView
                android:id="@+id/lblFirends"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="15dip"
                android:fontFamily="sans-serif-light"
                android:text="@string/label_friends"/>

            <TextView
                android:id="@+id/tvFriends"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="13dip"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:fontFamily="sans-serif"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="150dp"
                android:src="@drawable/ngomo6"
                android:scaleType="centerInside"/>

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="150dp"
                    android:src="@drawable/pelo"
                    android:tint="#FF0000"
                    android:scaleType="centerInside"/>

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>